//will automatically build and run

plugins {
    id 'java'
    id 'application' //runs main class
}

java.sourceCompatibility "1.16"
java.targetCompatibility "1.16"

group 'edu.rit.iste-422'
version '1.0-SNAPSHOT'

ext {
    javaMainClass = 'RunEdgeConvert'
}

test {
    testLogging.showStandardStreams = true
}

application {
    mainClass = javaMainClass
}

repositories {
    mavenCentral()
}

dependencies {
    testImplementation 'junit:junit:4.12'
    testImplementation 'org.hamcrest:hamcrest-core:1.3'
    implementation 'org.apache.logging.log4j:log4j-api:2.13.3'
    implementation 'org.apache.logging.log4j:log4j-core:2.13.3'
}
